ensure text is not cut off

--- a/site/src/styles/body.css
+++ b/site/src/styles/body.css
@@ -1,6 +1,7 @@
 * {
   -webkit-tap-highlight-color: transparent;
   -webkit-user-drag: none;
+  line-height: 1.25 !important;
 }
 
 body {
